--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="navbar-nav ms-auto text-end">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="movie.html">Movies</a>
@@ -63,6 +63,12 @@
                             <a class="nav-link" href="series.html">Series</a>
                         </li>
                     </ul>
+                    <form id="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control form-control-sm" placeholder="Search..." required>
+                            <button class="btn btn-sm btn-danger" type="button"><i class="bi bi-search"></i></button>
+                        </div>
+                    </form>
                 </div>
             </nav>
             <!-- Banner -->
@@ -72,7 +78,7 @@
                         <h1>Welcome To <span>Movie Club</span></h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio et cupiditate accusantium
                             a. Aliquam doloremque quam obcaecati velit aspernatur tempora.</p>
-                        <a href="#movies" class="btn btn-danger rounded-pill">Discover More</a>
+                        <a href="movie.html" class="btn btn-danger rounded-pill">Discover More</a>
                     </div>
                     <div class="col-xl-4 col-md-6 align-self-center">
                         <img src="./assets/images/banner.png" class="img-fluid" alt="">
@@ -81,6 +87,18 @@
             </div>
         </div>
     </header>
+    <!-- ========= Search ========= -->
+    <section id="searching">
+        <div class="container">
+            <div class="section-title align-self-center">
+                <h2>Searching Results</h2>
+                <hr>
+            </div>
+            <div class="row content">
+                <!-- Render Dynamically -->
+            </div>
+        </div>
+    </section>
     <!-- ========= Top Movies ========= -->
     <section id="top-movies">
         <div class="container">
