--- a/series.html
+++ b/series.html
@@ -93,9 +93,20 @@
             <div class="row content">
                 <!-- Render Dynamically -->
             </div>
-            <div class="mt-5 text-center">
-                <button type="button" class="btn btn-danger" id="load-more">Load More</button>
-            </div>
+            <!-- Pagination -->
+            <ul class="pagination mt-5">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous" id="prevBtn">
+                        Prev
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link active" href="javascript: void(0);" id="currBtn">1</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next" id="nextBtn">
+                        Next
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
     <!-- ========= Footer ========= -->
