--- a/movie.html
+++ b/movie.html
@@ -103,7 +103,7 @@
                 <li class="page-item"><a class="page-link active" href="javascript: void(0);" id="currBtn">1</a></li>
                 <li class="page-item">
                     <a class="page-link" href="#" aria-label="Next" id="nextBtn">
-                       Next
+                        Next
                     </a>
                 </li>
             </ul>
@@ -119,6 +119,19 @@
             </small>
         </div>
     </footer>
+    <!-- ========= Modal ========= -->
+    <div class="modal fade" id="preview">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close" onclick="stopVdo()"><i
+                            class="bi bi-x-lg text-white"></i></button>
+                    <div class="ratio ratio-16x9">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Jquery Js -->
     <script src="assets/js/jquery-1.12.4.js"></script>
     <!-- Popper Js -->
