--- a/series.html
+++ b/series.html
@@ -119,6 +119,19 @@
             </small>
         </div>
     </footer>
+    <!-- ========= Modal ========= -->
+    <div class="modal fade" id="preview">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close" onclick="stopVdo()"><i
+                            class="bi bi-x-lg text-white"></i></button>
+                    <div class="ratio ratio-16x9">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- ========= Js Files ========= -->
     <!-- Jquery Js -->
     <script src="assets/js/jquery-1.12.4.js"></script>
