--- a/series.html
+++ b/series.html
@@ -60,8 +60,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="series.html">Series</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">
+                                Genre
+                            </a>
+                            <ul class="dropdown-menu"></ul>
+                        </li>
                     </ul>
-                    <form id="search">
+                    <form id="search-form">
                         <div class="input-group">
                             <input type="text" class="form-control form-control-sm" placeholder="Search..." required>
                             <button class="btn btn-sm btn-danger" type="button"><i class="bi bi-search"></i></button>
@@ -72,37 +78,37 @@
         </div>
     </header>
     <!-- ========= Search ========= -->
-    <section id="searching">
+    <section class="searching">
         <div class="container">
             <div class="section-title align-self-center">
                 <h2>Searching Results</h2>
                 <hr>
             </div>
-            <div class="row content">
+            <div class="row content" id="searching">
                 <!-- Render Dynamically -->
             </div>
         </div>
     </section>
     <!-- ========= All Series ========= -->
-    <section id="series">
+    <section class="series">
         <div class="container">
             <div class="section-title align-self-center">
                 <h2>Latest Release</h2>
                 <hr>
             </div>
-            <div class="row content">
+            <div class="row content" id="series">
                 <!-- Render Dynamically -->
             </div>
             <!-- Pagination -->
             <ul class="pagination mt-5">
                 <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Previous" id="prevBtn">
+                    <a class="page-link" role="button" aria-label="Previous" id="prevBtn">
                         Prev
                     </a>
                 </li>
-                <li class="page-item"><a class="page-link active" href="javascript: void(0);" id="currBtn">1</a></li>
+                <li class="page-item"><a class="page-link active" role="button" id="currBtn">1</a></li>
                 <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next" id="nextBtn">
+                    <a class="page-link" role="button" aria-label="Next" id="nextBtn">
                         Next
                     </a>
                 </li>
